Redbay client project